# TAV

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
configs/: tav_mosmeddata.yaml  tav_qata_cov19.yaml
scripts/: demo_tav_forward.py  train_tav.py
tav/: __init__.py
tav/models/: __init__.py  attention_gate.py  decoder.py  tav.py  text_encoder.py  tgam.py  vision_encoder.py
tav/training/: __init__.py  losses.py  metrics.py
tests/: test_tav_forward.py
